src/test/ui/missing/missing-items/issue-40221.stderr
error[E0004]: non-exhaustive patterns: `C(QA)` not covered
  --> $DIR/issue-40221.rs:11:11
   |
LL |     match proto { //~ ERROR non-exhaustive patterns
   |           ^^^^^ pattern `C(QA)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
